initial project commit

--- a/.env
+++ b/.env
@@ -21,5 +21,7 @@ COMPOSE_PROJECT_NAME=symfony_dockerized
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=8.0.23
+#DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=8.0.23
+DATABASE_URL=mysql://app_user:helloworld@db:3306/app_db?serverVersion=8.0.23
 ###< doctrine/doctrine-bundle ###
+
