--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
     db:
         image: mysql:8.0.23
-        platform: linux/x86_64
+        #platform: linux/x86_64
         command: --default-authentication-plugin=mysql_native_password
         volumes:
             - "db_app:/var/lib/mysql"
@@ -13,7 +13,7 @@ services:
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
         ports:
-            - 3306:3306
+            - 3308:3306
         networks:
             - symfony
     php:
@@ -31,7 +31,7 @@ services:
         volumes:
             - symfony_dockerized_app_sync:/var/www/symfony/
         ports:
-            - 80:80
+            - 8080:80
         networks:
             - symfony
         env_file:
