--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,16 @@
     "symfony/dotenv": "6.1.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "6.1.*",
+    "symfony/http-client": "6.1.*",
     "symfony/runtime": "6.1.*",
     "symfony/yaml": "6.1.*"
   },
   "require-dev": {
-    "symfony/maker-bundle": "1.43.*"
+    "phpunit/phpunit": "^9.5",
+    "symfony/browser-kit": "6.1.*",
+    "symfony/css-selector": "6.1.*",
+    "symfony/maker-bundle": "1.43.*",
+    "symfony/phpunit-bridge": "^6.1"
   },
   "config": {
     "preferred-install": {
