--- a/.docker/docker-sync.yml
+++ b/.docker/docker-sync.yml
@@ -5,7 +5,7 @@ options:
     verbose: true
 
 syncs:
-    symfony_dockerized_app_sync:
+    log_parser_app_sync:
         src: "../"
         sync_userid: "33"
         sync_excludes:
