--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 COMPOSE_PROJECT_NAME=log_parser
 DATABASE_URL=mysql://root:hello@db:3306/app_db?serverVersion=8.0.23
-
+LOG_FILE_PATH="logs.txt"
+LOG_PATTERN="/(?<service>\S+) (?<space1>\S+) (?<spacer2>\S+) (?<datetime>\[([^:]+):(\d+:\d+:\d+) ([^\]]+)\]) (?<requestType>\S+) (?<path>\S+) (?<httpHeader>\S+) (?<status>\d+)/"
 
